@@ -1,6 +1,8 @@
 --- CHANGELOG ---
 
 --- PyFMI-trunk ---
+    * Improved the performance of estimating directional derivatives
+      (ticket:5569)
     * Added support for computing only a subset of interesting columns
       when considering the cpr seed (ticket:5825)
     * Fixed so that the log file is kept open during the initialization
